WINDUP-3602 Run project's tests on JDK 11 and 17